--- a/src-astro/src/layouts/Layout.astro
+++ b/src-astro/src/layouts/Layout.astro
@@ -27,6 +27,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content={description} />
+    <meta name="theme-color" content="#6ABFAD" />
 
     <title>{fullTitle}</title>
 
@@ -60,8 +61,9 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
     <link rel="sitemap" href="/sitemap-index.xml" />
   </head>
   <body>
+    <a href="#main" class="skip-link">Aller au contenu principal</a>
     <Navigation />
-    <main>
+    <main id="main">
       <slot />
     </main>
     <Footer />
